--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
+    "ngx-owl-carousel-o": "^16.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
